# smart-video-learning-tool

./: 00_START_HERE.md  COMPLETION_VERIFICATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_INDEX.md  FINAL_SUMMARY.md  FRONTEND_LOCAL_STORAGE_README.md  GITHUB_SETUP.md  PHASE_3_COMPLETION.md  PHASE_3_TESTING_GUIDE.md  PHASE_3_TRANSCRIPT_EXTRACTION.md  PHASE_4_AI_INTEGRATION.md  PHASE_STRUCTURE.md  PRODUCTION_READY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS_SUMMARY.md  README.md  SETUP_AND_TESTING_GUIDE.md  WHATS_NEW.md
backend/: .env.example  pyproject.toml  render.yaml  requirements-prod.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py  wsgi.py
backend/app/routes/: __init__.py  transcript_routes.py  video_routes.py
backend/app/schemas/: __init__.py  transcript_schema.py  video_schema.py
backend/app/services/: __init__.py  ai_service.py  transcript_service.py
backend/app/utils/: __init__.py  youtube_utils.py
frontend/: .env.example  .env.production  index.html  netlify.toml  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Footer.jsx  Header.jsx
frontend/src/pages/: Dashboard.jsx  HomePage.jsx  ResultsPage.jsx  VideoProcessor.jsx
frontend/src/services/: apiClient.js  localStorageService.js  mockAIService.js
